<resources>
    <string name="app_name">Pelita</string>
    <string name="action_settings">Settings</string>

    // Onboarding
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Selanjutnya</string>
    <string name="previous">Sebelumnya</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_home_fragment">Hello Home fragment</string>


    <string name="btc_next">Next</string>
    <string name="btc_finish">Finish</string>
    <string name="tv_email">Email</string>
    <string name="ev_email">Masukkan Email</string>
    <string name="btn_daftarkan">Daftarkan</string>
    <string name="ev_username">Masukkan Username</string>
    <string name="ev_password">Masukkan Password</string>
    <string name="punya_akun">Sudah punya akun?</string>
    <string name="tv_buatakun">Buat Akun Anda</string>
    <string name="tv_password">Password</string>
    <string name="tv_username">Username</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_daftar">Belum punya akun?</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="donasi">Donasi</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="nama_pengguna">Nama pengguna !!!</string>
    <string name="hello_ud83d_udc4b">Hello 👋</string>
    <string name="inilah_konten_pilihanmu">Inilah Konten Pilihanmu</string>
    <string name="makanan">Makanan</string>
    <string name="resep">Resep</string>
    <string name="berhasil_masuk">Berhasil Masuk</string>

    <string name="img_donasi">Image Donasi</string>
    <string name="detail_donasi">Detail Donasi</string>
    <string name="desc">Description</string>
    <string name="donasi_sekarang">Donasi Sekarang</string>

    <string name="selected_item">Selected item:</string>
    <string name="google_icon_description">Google Login Button</string>

    <string-array name="UmurBayi">
        <item>6 - 8 Bulan</item>
        <item>9 - 11 Bulan</item>
        <item>12 - 23 Bulan</item>
        <item>24 - 59 Bulan</item>
    </string-array>

    <string name="onboard1">Selamat Datang di\n Aplikasi PELITA!</string>
    <string name="onboard2">Jelajahi Rekomendasi MPASI untuk Tumbuh Kembang Si Kecil</string>

</resources>
