<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="194dp"
        android:layout_height="152dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_logo" />

    <ImageView
        android:id="@+id/iv_appName"
        android:layout_width="228dp"
        android:layout_height="83dp"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_app_name" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_appName"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tv_buatakun"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nama"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tv_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ev_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_marginTop="8dp"
        android:hint="@string/ev_username"
        android:textColorHint="@android:color/darker_gray"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_namaRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ev_username"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tv_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ev_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_marginTop="8dp"
        android:hint="@string/ev_email"
        android:textColorHint="@android:color/darker_gray"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_emailRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ev_email"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tv_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ev_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginTop="8dp"
        android:hint="@string/ev_password"
        android:textColorHint="@android:color/darker_gray"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:endIconContentDescription="Toggle Password Visibility"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passwordRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ev_password"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:text="@string/btn_daftarkan"
        tools:ignore="TouchTargetSizeCheck" />


    <LinearLayout
        android:id="@+id/tvToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegis"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/punya_akun"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
