<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/hello_ud83d_udc4b"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hello"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/nama_pengguna"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_inilah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginStart="8dp"
            android:text="@string/inilah_konten_pilihanmu"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_inilah"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_makanan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:background="@drawable/custom_button_background1"
                android:text="@string/makanan"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_resep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:background="@drawable/custom_button_background1"
                android:text="@string/resep"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_gambar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:contentDescription="TODO"
            android:src="@drawable/onboarding1" />

        <TextView
            android:id="@+id/tv_berhasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_gambar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/berhasil_masuk"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/iv_gambar" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_berhasil"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Temukan Rekomendasi Makanan Bayi Anda Disini"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/tv_berhasil" />

        <!-- Your existing RecyclerView and ProgressBar code here -->

    </RelativeLayout>

</FrameLayout>
